Fix #107384: ops.file.bookmark_move.poll() crash outside File Browser

This was a mistake in backporting 671c3e1fa4ac (backport was
3e3a70a8bb17), so a fix for the `blender-v2.93-release` branch only.